2007-11-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* MarshalTest.cs: Add a rountrip test case for BSTR (bug #339530).

2007-09-14  Zoltan Varga  <vargaz@gmail.com>

	* GCHandleTest.cs: Add some tests.

2007-08-23  Robert Jordan  <robertj@gmx.net>

	* MarshalTest.cs: Added test for HGlobal allocations. See bug #82499.

2006-08-31 Robert Jordan  <robertj@gmx.net>

	* MarshalTest.cs: Added tests for PtrToStringAuto/StringToHGlobalAuto.

2005-08-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* MarshalTest.cs: Added test for ReadInt32 (versus arch endianess).
	Added endian check as Marshal must use CPU endianess.

2006-6-8  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* MarshalTest.cs: Added tests for GetComSlotForMethodInfo.

2005-10-28  Sebastien Pouliot  <sebastien@ximian.com>

	* MarshalTest.cs: Added tests for 2.0 SecureTo* and ZeroFree* methods.

2005-09-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* MarshalTest.cs: Added test for bug #76123.

2005-06-13  Sebastien Pouliot  <sebastien@ximian.com>

	* RuntimeEnvironmentTest.cs: Commented an assert than wasn't true when
	doing a "make distcheck".

2005-06-07  Sebastien Pouliot  <sebastien@ximian.com>

	* RuntimeEnvironmentTest.cs: New. Unit tests for RuntimeEnvironment.
	* RuntimeEnvironmentCas.cs: New. CAS unit tests for RuntimeEnvironment

2005-04-23  Zoltan Varga  <vargaz@freemail.hu>

	* MarshalTest.cs: Add test for OffsetOf and static fields.

2005-04-04  Zoltan Varga  <vargaz@freemail.hu>

	* GCHandleTest.cs: Add test for calling Alloc with null.

2004-09-03  Zoltan Varga  <vargaz@freemail.hu>

	* MarshalTest.cs: Add test for AllocHGlobal and zero size.

2004-08-31  Nick Drochak <ndrochak@gol.com>

	* MarshalTest.cs: Make tests pass on .NET 1.1.

2004-05-05  Zoltan Varga  <vargaz@freemail.hu>

	* MarshalTest.cs: Add test for UnsafeAddrOfPinnedArrayElement.

2004-04-27  Zoltan Varga  <vargaz@freemail.hu>

	* MarshalTest.cs: New tests for PtrTo* methods and null.
